ncmpc 0.32 - not yet released
* fix manpage installation directory

ncmpc 0.31 - (2018-09-19)
* fix "No such song" in search screen
* fix progressbar when colors are disabled
* enable colors by default
* allow configuring per-style background colors
* keep current song in xterm title when MPD is paused
* load configuration from $XDG_CONFIG_HOME/ncmpc/config
* always show the screen list at the top
* fix memory leak
* require MPD 0.19

ncmpc 0.30 - (2018-04-04)
* fix crash after pressing ^W in search screen
* fix crash bug in chat screen
* fix completion list
* new color "progressbar-background"
* switch the code base to C++14
* build manual with Sphinx

ncmpc 0.29 - (2017-11-05)
* fix crash after losing MPD connection
* fix crash after DNS lookup error
* add Meson option "lyrics_plugin_dir"
* fallback libncurses detection without pkg-config

ncmpc 0.28 - (2017-09-21)
* fix crash on lyrics screen
* fix memory leak
* hide the MPD password from the queue screen title
* implement password for asynchronous connect
* build with Meson instead of autotools

ncmpc 0.27 - (2017-03-25)
* work around connect failure if /var/run/mpd/socket does not exist
* remove the status bar clock (option "display-time")
* fix assertion failure after connect failure
* several Windows build fixes

ncmpc 0.26 - (2017-03-20)
* require libmpdclient 2.9
* adapt to lirc 0.9.4
* lyricswiki: update regex
* screen_song: show "f" and "dsd" formats
* connect asynchronously
* fix flickering in color mode
* fix gcc 7 warnings

ncmpc 0.25 - (2016-08-18)
* implement "%disc%"
* lyricswiki: handle redirects
* lyricswiki: update XML format


ncmpc 0.24 - (2014-07-14)
* fix crash on "jump" (hotkey ".")
* save keys to path specified by --key-file


ncmpc 0.23 - (2014-07-10)
* fix broken l10n in out-of-tree builds


ncmpc 0.22 - (2014-06-09)
* rename "playlist" to "queue"
* remove useless "Connected to ..." message
* require libmpdclient 2.3, MPD 0.16
* patched color line-flags