@@ -1,5 +1,6 @@
 ncmpc 0.32 - not yet released
 * fix manpage installation directory
+* fix build breakages with some ncurses builds
 
 ncmpc 0.31 - (2018-09-19)
 * fix "No such song" in search screen
